# aiida-trains-pot

./: pyproject.toml
examples/graphene/: mace_config.yml  meta_config.yml  run_atp.py  run_atp_meta.py
examples/magnetic/: LCOx.xyz  mace_config.yaml  run_atp.py
examples/nonmagnetic/: SiC.xyz  mace_config.yaml  restart_atp.py  run_atp.py
src/aiida_trains_pot/abinitiolabelling/quantumespresso/: constrained.py
src/aiida_trains_pot/aiida_trains_pot_workflow/: abinitiolabelling_wc.py  aiida_trains_pot_workflow.py  exploration_wc.py  training_wc.py
src/aiida_trains_pot/data/: pesdata.py
src/aiida_trains_pot/datasetaugmentation/datasetaugmentation_wc/: datasetaugmentation_wc.py
src/aiida_trains_pot/evaluation/: calculations.py
src/aiida_trains_pot/mace/mace_train_plugin/: calculations.py
src/aiida_trains_pot/mace/mace_train_wc/: mace_train_wc.py
src/aiida_trains_pot/meta/meta_train_plugin/: __init__.py  calculations.py  parsers.py
src/aiida_trains_pot/meta/meta_train_wc/: meta_train_wc.py
src/aiida_trains_pot/parsers/: evaluation.py  mace_train.py
src/aiida_trains_pot/portable_codes/committee_evaluation/: committee_evaluation.py
src/aiida_trains_pot/utils/: generate_config.py  lammps_pair_coeffs.py  restart.py
src/aiida_trains_pot/workflows/: abinitiolabelling.py  aiida_trains_pot.py  lammpsmd_exploration.py  mace_train.py  pwconstrained.py  training.py
